# ArucoMM

./: README.md  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle
app/include/Eigen/src/OrderingMethods/: Amd.h  Eigen_Colamd.h
app/include/Eigen/src/plugins/: ArrayCwiseBinaryOps.h
app/include/aruco/: markerdetector.h
app/include/ucoslam/: imageparams.h  map.h  system.h  ucoslam.h
app/include/ucoslam/utils/: frameextractor.h  mapinitializer.h  mapmanager.h
app/include/xflann/: index.h  types.h
app/release/: output.json
app/src/androidTest/java/com/uco/ava/appcv/arucomm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: GameClass.h  MapperSceneDrawer.h  native-lib.cpp
app/src/main/java/com/uco/ava/appcv/arucomm/: AboutInfo.java  AvailableResolutions.java  FirstActivity.java  (+9 more)
app/src/main/java/com/uco/avaappbeta/: AboutInfo.java  AvailableResolutions.java  FirstActivity.java  MainActivity.java  MaterialIntro.java  OpenTutorial.java  PreferenciasActivity.java  PreferenciasFragment.java  RequestPermissionActivity.java  SendParamsFile.java  SendTestFiles.java  VisualiserActivity.java
app/src/main/java/com/uco/avaappbeta/bbdd/: CalibrationClass.java  ConexionSQLiteHelper.java  ConstantNames.java  dbCreatorActivity.java
app/src/main/res/layout/: app_info.xml  dialog_savemap.xml  intro_get_files.xml  main_layout.xml  permission_layout.xml  send_test_files.xml  visualiser_layout.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferencias.xml
(+7 files in other folders)
